kubernetes/infrastructure/traefik/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: dashboard-basic-auth
  namespace: kube-system
spec:
  basicAuth:
    secret: traefik-dashboard-auth
    removeHeader: false
