kubernetes/infrastructure/traefik/httproute-dashboard.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  parentRefs:
    - name: traefik-public
      sectionName: traefik
    - name: traefik-public
      sectionName: websecure
  hostnames:
    - traefik.torquasmvo.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /dashboard
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - kind: TraefikService
          group: traefik.io
          name: api@internal
